# Training-FastAPI

./: .pre-commit-config.yaml  Dockerfile  Taskfile.yml  commitlint.config.js  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  main.py  pyproject.toml
backend/core/: rate_limit.py  security.py  streaming.py  tracing.py
backend/routers/: api_key_auth.py  chat.py  health.py  oauth.py  public.py
backend/schemas/: auth.py  chat.py  users.py
backend/services/: llm.py
backend/test/: conftest.py  test_auth.py  test_endpoints.py  test_main.py  test_models.py  test_streaming.py
nginx/: fastapi_site.conf  fastapi_tuning.conf
